# AiML-brent-oil-price-analysis

./: .gitignore  Makefile  README.md  pyproject.toml
myenv/: pyvenv.cfg
myenv/Scripts/: Activate.ps1  activate  activate.bat  jsonpointer
notebooks/: LSTM-model.ipynb  data_preprocessing.ipynb  eda.ipynb  modeling.ipynb  modelling.ipynb
scripts/: data_cleaner.py  eda.py  modeling.py
