[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "scripts"
version = "0.0.1"
description = "This project analyzes Brent oil prices from 2013-2022, detecting structural changes and associating them with major events to provide data-driven insights for the energy industry."
authors = [
  { name = "Daniel Andarge" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["scripts"]
force_sort_within_sections = true
